correct spacing of nav underline (BBR)

--- a/public/assets/css/demo.scss
+++ b/public/assets/css/demo.scss
@@ -200,7 +200,7 @@
     .link-underline::after {
         content: '';
         position: absolute;
-        bottom: -14px;
+        bottom: 0px;
         left: 0;
         width: 100%;
         height: 2px;
@@ -212,7 +212,7 @@
     .link-active::after {
         content: '';
         position: absolute;
-        bottom: -14px;
+        bottom: 0bpx;
         left: 0;
         width: 100%;
         height: 2px;
